@@ -3,7 +3,9 @@ strongswan (5.5.3-3) UNRELEASED; urgency=medium
   * debian/rules:
     - remove .la files before install
     - don't call dh_install with --fail-missing
-    - override dh_missing with --fail-missing to catch uninstalled files.
+    - override dh_missing with --fail-missing to catch uninstalled files
+    - apply patch from Gerald Turner to restrict permissions on swanctl folder
+      containing private material.
   * debian/strongswan-swanctl.install:
     - install the whole /etc/swanctl folder, including (empty) subfolders.
                                                                 closes: #866324
